# iqdb-quantize

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: quantize.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v1.0.0.md
examples/: binary_quantization.rs  compression.rs  product_quantization.rs  rerank.rs  scalar_quantization.rs
src/: binary.rs  code.rs  lib.rs  product.rs  rng.rs  scalar.rs  train.rs  traits.rs  validate.rs
tests/: consumer_simulation.rs  determinism.rs  edge_cases.rs  proptest_invariants.rs  recall.rs  smoke.rs  tracing.rs
